--- a/Homework 16/assets/css/style.css
+++ b/Homework 16/assets/css/style.css
@@ -29,3 +29,16 @@ body {
   margin: 0;
   font-size: 16px;
 }
+
+.tooltip {
+  position: absolute;
+  width: 100px;
+  height: 40px;
+  padding: 1px;
+  font: 10px sans-serif;
+  color: white;
+  text-align: center;
+  background:grey;
+  border: 0;
+  border-radius: 8px;
+}
